--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "start": "node ./server.js && webpack-dev-server --open",
         "start:dev": "nodemon ./server.js",
         "build": "webpack --mode production",
-        "heroku-postbuild": "npm install && npm run build"
+        "heroku-postbuild": "cd client && npm install && npm run build"
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
@@ -39,7 +39,6 @@
         "yup": "^0.29.3"
     },
     "devDependencies": {
-        "nodemon": "^2.0.3",
         "@babel/core": "^7.4.3",
         "@babel/preset-env": "^7.4.3",
         "@babel/preset-react": "^7.0.0",
@@ -48,6 +47,7 @@
         "html-webpack-plugin": "^3.2.0",
         "less": "^3.11.0",
         "less-loader": "^5.0.0",
+        "nodemon": "^2.0.3",
         "path": "^0.12.7",
         "style-loader": "^1.1.3",
         "webpack": "^4.29.6",
