--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "start": "node ./server.js && webpack-dev-server --open",
         "start:dev": "nodemon ./server.js",
         "build": "webpack --mode production",
-        "heroku-postbuild": "cd client && npm install && npm run build"
+        "heroku-postbuild": "npm install && npm run build"
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
